--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 										<nav id="top-primary-nav" class="menuzord green" data-effect="fade" data-animation="none" data-align="right">
 											<ul id="main-nav" class="menuzord-menu">
 												<li class="active"><a href="index-mp-layout1.html">Home</a></li>
-												<li><a href="page-about.html">关于</a></li>
+												<li><a href="page-about.html">about</a></li>
 												<li><a href="#">Pages</a>
 													<ul class="dropdown">
 														<li><a href="page-gallery.html">Gallery</a></li>
