--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								<div class="row header-nav-col-row">
 									<div class="col-sm-auto align-self-center">
 										<a class="menuzord-brand site-brand" href="index-mp-layout1.html">
-											<img class="logo-default logo-1x" src="images/logo-wide.png" alt="Logo">
+											<img class="logo-default logo-1x" src="images/logo-wide.png" width="500px" alt="Logo">
 											<img class="logo-default logo-2x retina" src="images/logo-wide@2x.png" alt="Logo">
 										</a>
 									</div>
